# synapse-admin-script

./: .gitignore  Pipfile  README.md  config.py.example  matrix_admin.py  pyproject.toml
